--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <!-- General margins -->
-
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
@@ -18,6 +17,16 @@
     <dimen name="feed_item_title_text">15sp</dimen>
     <dimen name="feed_item_date">10dp</dimen>
     <dimen name="feed_item_date_text">10sp</dimen>
+
+    <!-- Feed Viewer Layout -->
+    <dimen name="feed_date_size">15sp</dimen>
+    <dimen name="feed_date_wrapper_height">30dp</dimen>
+    <dimen name="feed_date_label_height">30dp</dimen>
+    <dimen name="feed_date_content_height">30dp</dimen>
+
+    <dimen name="feed_link_wrapper_height">40dp</dimen>
+    <dimen name="feed_link_label_height">40dp</dimen>
+    <dimen name="feed_link_content_height">40dp</dimen>
 
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
