--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,8 +28,7 @@
     <dimen name="feed_link_label_height">40dp</dimen>
     <dimen name="feed_link_content_height">40dp</dimen>
 
-    <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
-         https://developer.android.com/design/patterns/navigation-drawer.html -->
+    <!-- Navigation Drawer -->
     <dimen name="navigation_drawer_width">240dp</dimen>
 
 </resources>
